--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.9",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "websocket": "^1.0.35"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
